# shopify_bot

./: Cargo.toml  README.md
auth_server/: package-lock.json  package.json  wrangler.toml
auth_server/src/: index.js
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: app.js  index.js
frontend/src/auth_utils/: AuthContext.js  Protection.js  authContext.js  protection.js
frontend/src/components/: App.js  Clock.js  Home.js  Item.js  Items.js  item.js  items.js
frontend/src/pages/: About.js  Clock.js  Home.js  clock.js  home.js
frontend/src/styles/: about.css  clock.css  home.css  item.css
server/: README.md  package.json  wrangler.toml
server/src/: index.js  lib.rs
src/: lib.rs
