[package]
name = "bot_server"
version = "0.1.0"
authors = ["joshshen"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
itertools = "0.10.3"
reqwest = { version = "0.11.9", features = ["json", "rustls-tls"] }
serde = "1.0.136"
serde_json = "1.0.67"
url = "2.2.2"
worker = "0.0.9"

console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
opt-level = "s"
